minor meta-data changes

--- a/client/app1/public/index.html
+++ b/client/app1/public/index.html
@@ -16,8 +16,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="google-site-verification" content="_s5lzu-Gq8s8C0o_1M9EUBlqrvtGQXUdfzpYfiFJ1Mo" />
-    <meta name="description" content="Static Page by Brennan Kolotinsky" />
-    <meta name="keywords" content="Brennan, Kolotinsky, Brennan Kolotinsky, test" />
+    <meta name="description" content="RespiraWorks technology developed by Brennan Kolotinsky to showcase test data and store it in a database!" />
+    <meta name="keywords" content="Brennan, Kolotinsky, Brennan Kolotinsky, RespiraWorks" />
     <meta name="author" content="Brennan Kolotinsky" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
